notusing precompiled header

--- a/Advent-of-Code/Advent-of-Code/Advent-of-Code.vcxproj
+++ b/Advent-of-Code/Advent-of-Code/Advent-of-Code.vcxproj
@@ -23,7 +23,6 @@
     <ProjectGuid>{FBD0C6E3-DD9D-4FBD-B3D1-3E166037D967}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>AdventofCode</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -99,7 +98,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
