--- a/Advent-of-Code/Advent-of-Code/Advent-of-Code.vcxproj
+++ b/Advent-of-Code/Advent-of-Code/Advent-of-Code.vcxproj
@@ -18,6 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\day17.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FBD0C6E3-DD9D-4FBD-B3D1-3E166037D967}</ProjectGuid>
