--- a/Advent-of-Code/Advent-of-Code/Advent-of-Code.vcxproj.filters
+++ b/Advent-of-Code/Advent-of-Code/Advent-of-Code.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\day17.cpp">
+    <ClCompile Include="..\day17a.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
