--- a/Kattis/Kattis/Kattis.vcxproj
+++ b/Kattis/Kattis/Kattis.vcxproj
@@ -99,7 +99,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -155,12 +155,6 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Input\input.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\Unsolved\flowshop.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
